# PenumbraOS

./: PENUMBRA_FORK.md
components/adb_remote_auth/: Cargo.toml  README.md
components/adb_remote_auth/adb_client/: Cargo.toml
components/adb_signer/: Cargo.toml  LICENSE  README.md  wrangler.toml
components/adb_signer/.cargo/: config.toml
components/adb_signer/src/: crypto.rs  lib.rs  types.rs
components/adbd/: README.md  settings.gradle.kts
components/adbd/app/: build.gradle.kts
components/adbd/config/: adbd_service.unit
components/adbd/gradle/: libs.versions.toml
components/ai_pin_logger-rs/: Cargo.toml  README.md
components/ai_pin_logger-rs/src/: lib.rs  platform_log_writer.rs
components/app_process-mocks/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
components/center/: .gitignore  README.md  center.html  index.html  install.html  package-lock.json  package.json  tsconfig.node.json  vite.center.config.ts  vite.config.ts  vite.install.config.ts  vite.shared.config.ts
components/center/scripts/: build-hugo-static.mjs
components/center/src/: App.tsx  CenterApp.tsx  bootstrap.tsx  index.css  logging.ts  main-center.tsx  main-install.tsx  main.tsx  vite-env.d.ts
components/docs/: README.md  onboarding.md  resetting.md
components/humane-system-hook/: .gitignore  AGENTS.md  GOAL.md  GRPC_SERVICES.md  LICENSE  README.md  settings.gradle.kts
components/humane-system-hook/hook/: build.gradle.kts
components/humane-system-hook/injector/: build.gradle.kts
components/humane-system-hook/scripts/: bootstrap-aliuhook.sh
components/humane-system-hook/server-rs/: Cargo.toml  build.rs  config.toml
components/humane-system-hook/server-rs/proto/humane/account/: account.proto
components/humane-system-hook/server-rs/proto/humane/aibus/: aibus.proto
components/humane-system-hook/server-rs/proto/humane/capture/: capture.proto
components/humane-system-hook/server-rs/proto/humane/common/: encryption.proto
components/humane-system-hook/server-rs/proto/humane/contacts/: contacts.proto
components/humane-system-hook/server-rs/proto/humane/events/: events.proto
components/humane-system-hook/server-rs/proto/humane/featureflags/: featureflags.proto
components/humane-system-hook/server-rs/proto/humane/partnerservices/: partnerservices.proto
components/humane-system-hook/server-rs/proto/humane/privacy/: privacy.proto  privacy_common.proto
components/humane-system-hook/server-rs/proto/humane/provisioning/: provisioning.proto
components/humane-system-hook/server-rs/proto/humane/pushrelay/: pushrelay.proto
components/humane-system-hook/server-rs/src/: api.rs  config.rs  db.rs  dedup.rs  esim.rs  main.rs  nearby.rs  storage.rs
components/humane-system-hook/server-rs/src/llm/: koa.rs  mod.rs
components/humane-system-hook/server-rs/src/services/: aibus.rs  capture.rs  contacts.rs  events.rs  featureflags.rs  mod.rs  partnerservices.rs  privacy.rs  provisioning.rs  pushrelay.rs  user_info.rs  wifi_config.rs
components/installer/: .gitignore  Cargo.toml  README.md  TAURI_UI_PLAN.md  install.sh
components/installer/configs/: penumbra.yml
components/installer/src/: adb.rs  config.rs  engine.rs  error.rs  github.rs  lib.rs  logs.rs  main.rs  platform.rs
components/installer/src-tauri/: Cargo.toml  tauri.conf.json
components/installer/src-tauri/capabilities/: default.json
components/installer/src-tauri/src/: main.rs
components/installer/src-ui/: index.html  package-lock.json  package.json
components/installer/src-ui/src/: App.tsx
components/installer/src-ui/src/components/: ConsoleOutput.tsx  NoDevice.tsx  PackageList.tsx  RepositorySelector.tsx
components/installer/src-ui/src/hooks/: useDeviceConnectionStatus.ts  useTauri.ts
components/mabl/: .gitignore  README.md  build.gradle.kts  build.sh  settings.gradle.kts
components/sdk/: LICENSE  README.md  build.sh  settings.gradle.kts
components/system-injector/: .gitignore  LICENSE  README.md  abxdroppedapk.keystore  settings.gradle.kts
(+500 files in other folders)
